[metadata]
name = pycredit
classifiers =
    Programming Language :: Python :: 3.7
summary = Library providing programmatic access to credit card statement by multiple providers
description-file =
    README.md
description-content-type = text/markdown
license = MIT
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/vmalloc/pycredit

[extras]
testing =
    pytest

[tool:pytest]
testpaths = tests
